--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,13 @@
             <artifactId>sql2o</artifactId>
             <version>1.5.4</version>
         </dependency>
+        <!-- version 2.1.3 still not available on maven, currently using the sourceforge -->
+        <dependency>
+            <groupId>com.healthmarketscience.sqlbuilder</groupId>
+            <artifactId>sqlbuilder</artifactId>
+            <version>2.1.3</version>
+        </dependency>
+
         <dependency>
             <groupId>org.glassfish.jersey.test-framework.providers</groupId>
             <artifactId>jersey-test-framework-provider-grizzly2</artifactId>
