--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,11 @@
             <artifactId>sqlbuilder</artifactId>
             <version>2.1.3</version>
         </dependency>
-
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.9.4</version>
+        </dependency>
         <dependency>
             <groupId>org.glassfish.jersey.test-framework.providers</groupId>
             <artifactId>jersey-test-framework-provider-grizzly2</artifactId>
