--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,7 @@ addons:
   apt:
     packages:
       - oracle-java8-installer
+services:
+  - postgresql
+before_install:
+  - mysql -e "create database IF NOT EXISTS test;" -uroot
