--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,8 @@
         <dependency>
             <groupId>com.microsoft.sqlserver</groupId>
             <artifactId>sqljdbc4</artifactId>
-            <version>4.0</version>
+            <version>4.2</version>
+            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.sql2o</groupId>
