--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <artifactId>sql</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <repositories>
+    <!-- repositories>
         <repository>
             <id>ossrh</id>
             <url>https://oss.sonatype.org/content/repositories/snapshots</url>
@@ -16,7 +16,7 @@
                 <enabled>true</enabled>
             </snapshots>
         </repository>
-    </repositories>
+    </repositories -->
 
     <dependencies>
         <dependency>
@@ -38,7 +38,7 @@
             <groupId>com.microsoft.sqlserver</groupId>
             <artifactId>sqljdbc4</artifactId>
             <version>4.2</version>
-            <scope>runtime</scope>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.sql2o</groupId>
