add microsoft driver dependency just in runtime

--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
             <groupId>com.microsoft.sqlserver</groupId>
             <artifactId>sqljdbc4</artifactId>
             <version>4.2</version>
-            <scope>provided</scope>
+            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.sql2o</groupId>
