--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,16 @@
     <dependencies>
         <dependency>
             <groupId>com.manywho.sdk</groupId>
+            <artifactId>sdk-server-undertow</artifactId>
+            <version>2.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.manywho.sdk</groupId>
+            <artifactId>sdk-server-servlet3</artifactId>
+            <version>2.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.manywho.sdk</groupId>
             <artifactId>sdk-services</artifactId>
             <version>2.0.0-SNAPSHOT</version>
         </dependency>
@@ -68,11 +78,7 @@
             <version>1.3.0</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>javax.el</groupId>
-            <artifactId>javax.el-api</artifactId>
-            <version>2.2.4</version>
-        </dependency>
+
     </dependencies>
 
     <build>
