--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,11 @@ before_install:
   - wget -O /tmp/sqljdbc.tar.gz https://download.microsoft.com/download/0/2/A/02AAE597-3865-456C-AE7F-613F99F850A8/sqljdbc_4.2.6420.100_enu.tar.gz
   - tar -xvf /tmp/sqljdbc.tar.gz -C /tmp
   - mvn install:install-file -Dfile=/tmp/sqljdbc_4.2/enu/sqljdbc42.jar -DgroupId=com.microsoft.sqlserver -DartifactId=sqljdbc4 -Dversion=4.2 -Dpackaging=jar
+before_script:
+  - psql -c 'create database test;' -U postgres
 script:
   - mvn clean package -DskipTests=true
   - mvn test -Dtest=UnitTestSuite
+  - mvn test -Dtest=PostgreSqlTestSuite
+env:
+  - ISOLATED=true
