--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ addons:
       - oracle-java8-installer
 services:
   - postgresql
-#- mysql
+  - mysql
 before_install:
   - mysql -e "create database IF NOT EXISTS test;" -uroot
   - wget -O /tmp/sqljdbc.tar.gz https://download.microsoft.com/download/0/2/A/02AAE597-3865-456C-AE7F-613F99F850A8/sqljdbc_4.2.6420.100_enu.tar.gz
@@ -17,11 +17,11 @@ before_install:
   - export TZ=Europe/London
 before_script:
   - psql -c 'create database test;' -U postgres
-#- mysql -e 'create database test;'
+  - mysql -e 'create database test;'
 script:
   - mvn clean package -DskipTests=true
   - mvn test -Dtest=UnitTestSuite
   - mvn test -Dtest=PostgreSqlTestSuite
-#- mvn test -Dtest=MySqlTestSuite
+  - mvn test -Dtest=MySqlTestSuite
 env:
   - ISOLATED=true
