--- a/.travis.yml
+++ b/.travis.yml
@@ -22,13 +22,4 @@ script:
   - mvn test -Dtest=UnitTestSuite
   - mvn test -Dtest=MySqlTestSuite
   - mvn test -Dtest=PostgreSqlTestSuite
-env:
-  addons:
-    - postgresql: "9.1"
-    - postgresql: "9.2"
-    - postgresql: "9.3"
-    - postgresql: "9.4"
-    - postgresql: "9.5"
-    - mysql: "5.6"
-    - mysql: "5.7"
-    - mysql: "5.8"
+  - mvn test -Dtest=SqlServerTestSuite
