--- a/.travis.yml
+++ b/.travis.yml
@@ -23,3 +23,6 @@ script:
   - mvn test -Dtest=MySqlTestSuite
   - mvn test -Dtest=PostgreSqlTestSuite
   - mvn test -Dtest=SqlServerTestSuite
+cache:
+  directories:
+  - $HOME/.m2
