--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,6 @@
             <url>https://oss.sonatype.org/content/repositories/snapshots</url>
             <snapshots>
                 <enabled>true</enabled>
-                <updatePolicy>always</updatePolicy>
             </snapshots>
         </repository>
     </repositories>
@@ -23,17 +22,17 @@
         <dependency>
             <groupId>com.manywho.sdk</groupId>
             <artifactId>sdk-server-undertow</artifactId>
-            <version>2.0.0-SNAPSHOT</version>
+            <version>2.0.0-20161004.105114-8</version>
         </dependency>
         <dependency>
             <groupId>com.manywho.sdk</groupId>
             <artifactId>sdk-server-servlet3</artifactId>
-            <version>2.0.0-SNAPSHOT</version>
+            <version>2.0.0-20161004.105113-8</version>
         </dependency>
         <dependency>
             <groupId>com.manywho.sdk</groupId>
             <artifactId>sdk-services</artifactId>
-            <version>2.0.0-SNAPSHOT</version>
+            <version>2.0.0-20161004.105110-37</version>
         </dependency>
         <dependency>
             <groupId>org.postgresql</groupId>
