--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <version>9.4-1200-jdbc41</version>
+            <version>9.4.1211</version>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
@@ -53,7 +53,12 @@
         <dependency>
             <groupId>org.sql2o</groupId>
             <artifactId>sql2o</artifactId>
-            <version>1.5.4</version>
+            <version>1.6.0-RC2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.sql2o.extensions</groupId>
+            <artifactId>sql2o-postgres</artifactId>
+            <version>1.6.0-RC2</version>
         </dependency>
         <!-- version 2.1.3 still not available on maven, currently using the sourceforge -->
         <dependency>
@@ -78,7 +83,11 @@
             <version>1.3.0</version>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.sql2o.extensions</groupId>
+            <artifactId>sql2o-postgres</artifactId>
+            <version>1.6.0-RC2</version>
+        </dependency>
     </dependencies>
 
     <build>
