--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,10 @@
 
     <repositories>
         <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+        <repository>
             <id>ossrh</id>
             <url>https://oss.sonatype.org/content/repositories/snapshots</url>
             <snapshots>
@@ -51,16 +55,15 @@
             <scope>runtime</scope>
         </dependency>
         <dependency>
-            <groupId>org.sql2o</groupId>
-            <artifactId>sql2o</artifactId>
-            <version>1.6.0-RC2</version>
+            <groupId>com.github.manywho.sql2o</groupId>
+            <artifactId>sql2o-postgres</artifactId>
+            <version>49f9f26d6c430ab4125ea4cadb3b87ffd07234bc</version>
         </dependency>
         <dependency>
-            <groupId>org.sql2o.extensions</groupId>
-            <artifactId>sql2o-postgres</artifactId>
-            <version>1.6.0-RC2</version>
+            <groupId>com.github.manywho</groupId>
+            <artifactId>sql2o</artifactId>
+            <version>49f9f26d6c430ab4125ea4cadb3b87ffd07234bc</version>
         </dependency>
-        <!-- version 2.1.3 still not available on maven, currently using the sourceforge -->
         <dependency>
             <groupId>com.healthmarketscience.sqlbuilder</groupId>
             <artifactId>sqlbuilder</artifactId>
@@ -82,11 +85,6 @@
             <artifactId>jsonassert</artifactId>
             <version>1.3.0</version>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.sql2o.extensions</groupId>
-            <artifactId>sql2o-postgres</artifactId>
-            <version>1.6.0-RC2</version>
         </dependency>
     </dependencies>
 
