--- a/pom.xml
+++ b/pom.xml
@@ -26,17 +26,12 @@
         <dependency>
             <groupId>com.manywho.sdk</groupId>
             <artifactId>sdk-server-undertow</artifactId>
-            <version>2.0.0-20161004.105114-8</version>
+            <version>2.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.manywho.sdk</groupId>
             <artifactId>sdk-server-servlet3</artifactId>
-            <version>2.0.0-20161004.105113-8</version>
-        </dependency>
-        <dependency>
-            <groupId>com.manywho.sdk</groupId>
-            <artifactId>sdk-services</artifactId>
-            <version>2.0.0-20161004.105110-37</version>
+            <version>2.0.0-20161020.091330-10</version>
         </dependency>
         <dependency>
             <groupId>org.postgresql</groupId>
