--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,14 @@ addons:
   apt:
     packages:
       - oracle-java8-installer
+      - mysql-server-5.6
+      - mysql-client-core-5.6
+      - mysql-client-5.6
 services:
   - postgresql
   - mysql
 before_install:
-  - export TZ=Europe/London
+    - export TZ=Europe/London
 before_script:
   - psql -c 'create database test;' -U postgres
   - mysql -u root -e 'create database test;'
