--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,15 @@
 language: java
 jdk:
   - oraclejdk8
-dist: precise
+dist: trusty
+sudo: required
 addons:
   apt:
     packages:
       - oracle-java8-installer
+      - mysql-server-5.6
+      - mysql-client-core-5.6
+      - mysql-client-5.6
 services:
   - postgresql
   - mysql
