--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
         </repository>
         <repository>
             <id>ossrh</id>
-            <url>z</url>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
             <snapshots>
                 <enabled>true</enabled>
             </snapshots>
