--- a/pom.xml
+++ b/pom.xml
@@ -52,9 +52,9 @@
             <version>42.1.4</version>
         </dependency>
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.6</version>
+            <groupId>org.mariadb.jdbc</groupId>
+            <artifactId>mariadb-java-client</artifactId>
+            <version>2.1.2</version>
         </dependency>
         <dependency>
             <groupId>com.microsoft.sqlserver</groupId>
